--- a/QuanLyTruongTieuHoc_API/QuanLyTruongTieuHoc_API/appsettings.json
+++ b/QuanLyTruongTieuHoc_API/QuanLyTruongTieuHoc_API/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "AppSettings": {
+    "PATH": "C:\\Users\\DELL\\source\\Web\\Doan2(WEB)",
+    "Secret": "123"
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=QUOCANH\\SQLEXPRESS;Database=QUANLYTRUONG_DOAN2;Trusted_Connection=True;Encrypt=False;"
+  },
+
+  "Jwt": {
+    "Key": "TicketQA_Secret_Key_1234567891011121314151617181920",
+    "Issuer": "TicketQA",
+    "Audience": "TicketQAUser",
+    "ExpiresInMinutes": 60
+  },
+
   "AllowedHosts": "*"
 }
