xử lý bảng parents

--- a/QuanLyTruongTieuHoc_API/QuanLyTruongTieuHoc_API/appsettings.json
+++ b/QuanLyTruongTieuHoc_API/QuanLyTruongTieuHoc_API/appsettings.json
@@ -7,12 +7,12 @@
   },
 
   "AppSettings": {
-    "PATH": "C:\\Users\\DELL\\source\\Web\\Doan2(WEB)",
+    "PATH": "D:\\kienthuc\\NAM3\\DOAN2\\DOAN2\\Doan2_DoHuuQuocAnh",
     "Secret": "123"
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=QUOCANH\\SQLEXPRESS;Database=QUANLYTRUONG_DOAN2;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=LAPTOP-377TGVKG\\MSSQLSERVER01;Database=QUANLYTRUONG_DOAN2;Trusted_Connection=True;Encrypt=False;"
   },
 
   "Jwt": {
